[project]
name = "CheetahVis"
version = "0.0.1"
dependencies = [
    "cheetah-accelerator",
    "trimesh",
    "dotenv",
    "websockets",
    "quart",
    "requests",
    "tqdm",
]

[tool.setuptools.package-data]
"CheetahVis.css" = ["*"]
"CheetahVis.dist" = ["*"]
"CheetahVis.dist.assets" = ["*"]
"CheetahVis.dist.models" = ["*"]
